Change PyPI package name to grad-cam

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pytorch-grad-cam
+name = grad-cam
 version = 1.0.0
 author = Jacob Gildenblat
 author_email = jacob.gildenblat@gmail.com
