--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-dataclasses==0.8
-dicom-factory==0.0.3
-numpy==1.19.5
-Pillow==8.2.0
+numpy
+Pillow
 torch==1.7.1
 torchvision==0.8.2
 typing-extensions==3.7.4.3
