--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,58 @@
-numpy
-Pillow
-torch>=1.7.1
-torchvision>=0.8.2
-ttach
-tqdm
-opencv-python
+absl-py==0.7.1
+attrs==19.3.0
+Automat==20.2.0
+certifi==2018.11.29
+charset-normalizer==2.0.6
+comet-ml==3.17.0
+configobj==5.0.6
+constantly==15.1.0
+cycler==0.10.0
+dulwich==0.20.25
+entrypoints==0.3
+everett==1.0.2
+grad-cam==1.3.1
+grpcio==1.40.0
+hyperlink==21.0.0
+idna==2.5
+imageio==2.9.0
+incremental==21.3.0
+joblib==1.0.1
+kiwisolver==1.3.2
+lxml==4.6.3
+matplotlib==3.4.3
+networkx==2.6.3
+nvidia-ml-py3==7.352.0
+opencv-python==4.5.3.56
+pandas==1.3.3
+protobuf==3.19.1
+pytorch-ignite==0.4.6
+pytz==2021.1
+PyWavelets==1.1.1
+pywin32==228
+requests==2.26.0
+requests-toolbelt==0.9.1
+scikit-image==0.18.3
+scikit-learn==1.0
+scipy==1.7.1
+semantic-version==2.8.5
+sip==4.19.13
+sklearn==0.0
+tensorboardX==2.4
+terminado==0.9.4
+threadpoolctl==2.2.0
+tifffile==2021.8.30
+timm==0.4.12
+torch==1.9.1
+torchaudio==0.9.1
+torchvision==0.2.1
+tqdm==4.62.3
+ttach==0.0.3
+Twisted==21.7.0
+twisted-iocpsupport==1.0.2
+urllib3==1.26.7
+webencodings==0.5.1
+websocket-client==1.2.1
+wincertstore==0.2
+wrapt==1.12.1
+wurlitzer==3.0.2
+zope.interface==5.4.0
